--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   },
   "dependencies": {
     "@astrojs/react": "^3.0.3",
+    "@nanostores/react": "^0.7.1",
     "@types/react": "^18.2.28",
     "@types/react-dom": "^18.2.13",
     "astro": "^3.2.3",
+    "nanostores": "^0.9.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   }
